fix: invisible list markers in rich text editor (#9)

--- a/styles/index.css
+++ b/styles/index.css
@@ -125,3 +125,12 @@
 .collapse-css-transition {
   transition: height 280ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* Mantine Rich Text Editor */
+.mantine-RichTextEditor-root ul {
+  list-style-type: disc;
+}
+
+.mantine-RichTextEditor-root ol {
+  list-style-type: decimal;
+}
